--- a/ödev-deneme/styles.css
+++ b/ödev-deneme/styles.css
@@ -4,12 +4,20 @@
       padding: 0;
       font-family: 'Roboto', sans-serif;
     }
+    #wrapper {
+      max-width: 700px;
+      margin: 0 auto;
+      display: flex;
+      flex-direction: column;
+      row-gap: 1rem;
+    }
     body {
         background-color: #f8f8f8;
         color: #333;
     }
     header {
       padding: 1rem 0;
+      display: flex;
     }
      header img.logo{
       display: flex;
@@ -36,4 +44,20 @@
       height: 100px;
       background: #eee;
  
+    }
+    .movie-card-info span {
+      border: 1px solid white;
+      border-radius: 5px;
+      padding: 2px 5px;
+    }
+    .movie-card-info a {
+      background-color: red;
+      color: white;
+      padding: 2px 5px;
+      border-radius: 0.4rem;
+      transition: 0.5s;
+    }
+    a {
+      color: white;
+      text-decoration: none;
     }
