--- a/ödev-deneme/styles.css
+++ b/ödev-deneme/styles.css
@@ -12,38 +12,59 @@
       row-gap: 1rem;
     }
     body {
-        background-color: #f8f8f8;
-        color: #333;
+        background-color: #000;
+        color: white;
     }
     header {
       padding: 1rem 0;
       display: flex;
     }
      header img.logo{
-      display: flex;
       height: 25px;
+   
+      
     }
      header .search-bar{
       gap: 1rem;
+      display: flex;
+      align-items: center;
     }
     .search-bar input {
         padding: 5px 10px;
+        border: 1px solid #ccc;
+        background: transparent;
+        color: white;
+        border-radius: 5px;
+        
+    }
+    .stars i {
+      color:gold;
     }
     .movie-card {
       background: #fff;
       border: 1px solid #ccc;
       width: 180px;
       padding: 10px;
+      position: relative;
     }
       .movie-list {
       display: flex;
       gap: 20px;
+      justify-content: space-between;
+      
     }
     .movie-card img{
       width: 100%;
-      height: 100px;
+      height: auto;
       background: #eee;
+      border-radius: 0.5rem;
+      
  
+    }
+    .d-flex {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     }
     .movie-card-info span {
       border: 1px solid white;
@@ -58,6 +79,21 @@
       transition: 0.5s;
     }
     a {
-      color: white;
+      color:red
       text-decoration: none;
+    }
+    footer {
+      display: flex;
+      gap: 1rem;
+      justify-content: space-between;
+    }
+    footer .about-footer {
+      width: 60%;
+      font-size: 1rem;
+    }
+    footer .about-footer p {
+      text-align: justify;
+    }
+    footer .logo2 img {
+      height: 2rem;
     }
