--- a/ödev-deneme/styles.css
+++ b/ödev-deneme/styles.css
@@ -4,6 +4,16 @@
       padding: 0;
       font-family: 'Roboto', sans-serif;
     }
+    .hero-section {
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("images/bg.jpg") no-repeat center center/cover;
+  padding: 2rem;
+  border-radius: 10px;
+}
+.hero-content h1 {
+  font-size: 2rem;
+
+}
     #wrapper {
       max-width: 700px;
       margin: 0 auto;
@@ -65,6 +75,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: 0.5rem;
     }
     .movie-card-info span {
       border: 1px solid white;
@@ -79,7 +90,7 @@
       transition: 0.5s;
     }
     a {
-      color:red
+      color:red ;
       text-decoration: none;
     }
     footer {
@@ -97,3 +108,6 @@
     footer .logo2 img {
       height: 2rem;
     }
+  .section-header {
+    margin: 1rem 0;
+  }
