--- a/ödev-deneme/styles.css
+++ b/ödev-deneme/styles.css
@@ -1,21 +1,18 @@
   * {
-      box-sizing: border-box;
-      margin: 0;
-      padding: 0;
       font-family: 'Roboto', sans-serif;
     }
-    .hero-section {
+  main {
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
     url("images/bg.jpg") no-repeat center center/cover;
   padding: 2rem;
   border-radius: 10px;
 }
-.hero-content h1 {
-  font-size: 2rem;
+.hero-section {
+  font-size: 1.5rem;
 
 }
     #wrapper {
-      max-width: 700px;
+      max-width: 1000px;
       margin: 0 auto;
       display: flex;
       flex-direction: column;
@@ -24,17 +21,20 @@
     body {
         background-color: #000;
         color: white;
+        font-weight: 400;
+        font-style: normal;
     }
     header {
       padding: 1rem 0;
-      display: flex;
+
     }
      header img.logo{
       height: 25px;
+      display: flex;
    
       
     }
-     header .search-bar{
+     header .search-bar {
       gap: 1rem;
       display: flex;
       align-items: center;
@@ -45,7 +45,10 @@
         background: transparent;
         color: white;
         border-radius: 5px;
-        
+        border-color: rgb(132, 136, 137); 
+        border-image: initial;
+        outline: none;
+               
     }
     .stars i {
       color:gold;
@@ -76,6 +79,7 @@
     align-items: center;
     justify-content: space-between;
     gap: 0.5rem;
+    
     }
     .movie-card-info span {
       border: 1px solid white;
@@ -90,8 +94,9 @@
       transition: 0.5s;
     }
     a {
-      color:red ;
+      color:white;
       text-decoration: none;
+       
     }
     footer {
       display: flex;
